# vidio

./: .gitignore  CMakeLists.txt  README.md  audio_support_notes.txt  demo_play_file.cpp  named_pipe.cpp  named_pipe.hpp  platform_posix.cpp  process_posix.cpp  prototype_config_api.cpp  subprocess.hpp  test_audio_playback.cpp  test_copy.cpp  test_named_pipe.cpp  test_playback.cpp  test_subprocess_oop.cpp  vidio.cpp  vidio.hpp  vidio_internal.hpp
